[package]
name = "rsmailcheck"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.49", features = ["derive"] }
encoding_rs = "0.8.35"
quoted_printable = "0.5.1"
regex = "1.12.2"
tokio = { version = "1.47.1", features = ["full"] }
# tokio-uring = "0.5.0"
